added template; added setting template in doc.env.page.template; removed expanded json demo

--- a/_docs/fullwidth/page.html
+++ b/_docs/fullwidth/page.html
@@ -11,12 +11,9 @@
       <div class="{{ css_class }}_box">
         <div class="{{ css_class }}_header">
           <h1>{{title}}</h1>
-          {{#subtitle}}
-          <p>{{subtitle}}</p>
-          {{/subtitle}}
         </div>
         <div class="{{ css_class }}_body">
-          {{body}}
+          {{{body}}}
         </div>
       </div>
     </div>
